--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.1.91
+@version        1.2.0
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -56,6 +56,14 @@ input,
 	left: 180px;
 }
 
+
+/* Wikipedia: link edit popup: "Link" */
+.ve-ui-linearContextItem-title,
+
+/* Wikipedia: link edit popup: "Text" */
+.ve-ui-linkContextItem-label-label,
+
+.ve-ui-linearContextItem-title span.oo-ui-widget,oo-ui-widget-enabled,oo-ui-iconElement,oo-ui-iconElement-icon,oo-ui-icon-link,oo-ui-labelElement-invisible,oo-ui-iconWidget,
 .ext-discussiontools-ui-replyWidget-footer, /* After comment textarea: "By clicking "Reply", you agree to our Terms of Use and agree to irrevocably release your text under the CC BY-SA 4.0 License and GFDL. You agree that a hyperlink or URL is sufficient attribution under the Creative Commons license" */
 #mw-uploadtext, /* https://en.wikipedia.org/wiki/Special:Upload */
 #siteSub, /* "From Wikipedia, the free encyclopedia" */
@@ -141,6 +149,9 @@ li.gallerybox div.thumb, /* https://commons.wikimedia.org/wiki/Category:Historic
 {
     border: 0 !important;
 }
+
+/* Wikipedia: link edit popup */
+.ve-ui-desktopContext .ve-ui-linkContextItem .ve-ui-linkContextItem-label,
 
 .infobox td[style='text-align: right; vertical-align: top; border-top: 1px solid #d0e1e0; padding: 1px 5px 1px 5px;'], /* https://be-tarask.wikipedia.org/wiki/Дашкаўка */
 .infobox td[style='border-top:1px solid #d0e1e0; padding: 1px 1px 1px 9px;'], /* https://be-tarask.wikipedia.org/wiki/Дашкаўка */
@@ -573,6 +584,8 @@ span[style='background-color:#EDF0FF'], /* https://be.wiktionary.org/wiki/мар
 .mw-revslider-revision-border-box {
 	border: 0;
 }
+
+.oo-ui-popupWidget-popup,
 .oo-ui-buttonElement-framed.oo-ui-widget-disabled > .oo-ui-buttonElement-button,
 .mw-parser-output .main-box, /* https://ru.wikipedia.org/wiki/Заглавная_страница */
 .toccolours, /* Top years at https://en.wikipedia.org/wiki/Category:2004_video_games */
@@ -694,6 +707,16 @@ ol.references li:target, /* Click to source[1] - highlight the source */
 .oo-ui-windowManager-modal > .oo-ui-dialog > .oo-ui-window-frame label /* Wikipedia: "Media settings" popup: labels for checkboxes "Wrap text around this item" and "Border" */
 {
 	color: #bbb !important;
+}
+
+.oo-ui-widget.oo-ui-widget-enabled.oo-ui-floatableElement-floatable.oo-ui-popupWidget-anchored.oo-ui-popupWidget.oo-ui-popupWidget-anchored-top {
+	backdrop-filter: blur(10px);
+	width: 50vw;
+}
+
+.ve-ui-context-menu.ve-ui-desktopContext-menu
+{
+	width: 50vw;
 }
 
 .oo-ui-processDialog > .oo-ui-window-frame /* Wikipedia: UI for media Search and Upload */
@@ -890,6 +913,10 @@ aside p, /* related articles: titles & second line with desc*/
 {
 	color: lightgray !important;
 }
+
+/* Wikipedia: link edit popup "Edit link": onhover article names */
+.oo-ui-menuOptionWidget.oo-ui-optionWidget-highlighted .mw-widget-titleOptionWidget-description,
+.oo-ui-menuOptionWidget.oo-ui-optionWidget-highlighted a span,
 
 /* Override */
 /* Wikidata: popup with "Potential issues" */
@@ -1218,8 +1245,17 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 
 
 ::selection {
-    background-color: #292;
-    color: #000;
+	background-color: #3b4 !important;
+	color: #000;
+}
+
+/* Wikipedia: link edit popup: article links */
+.oo-ui-menuOptionWidget.oo-ui-widget-enabled.oo-ui-optionWidget span,
+
+/* Wikipedia: link edit popup: label "Edit link" */
+.oo-ui-widget.oo-ui-widget-enabled.oo-ui-labelElement.oo-ui-labelElement-label.oo-ui-labelWidget
+{
+	color: #fff;
 }
 
 
