--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.2.3
+@version        1.3.0
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1289,6 +1289,13 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 @-moz-document domain("wikipedia.org") {
 	/* File page: hide useless navigation https://en.wikipedia.org/wiki/File:Armies-of-exigo--main-menu.png */
 	#filetoc {
+		display: none;
+	}
+}
+
+/* https://en.wikipedia.org/wiki/File:Armies-of-exigo--fallen-base--wide-screen.png */
+@-moz-document regexp("https://[a-z][a-z].wikipedia.org/wiki/File:.*") {
+	#toc {
 		display: none;
 	}
 }
