--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.3.7
+@version        1.3.8
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -737,7 +737,10 @@ ol.references li:target, /* Click to source[1] - highlight the source */
 
 #mw-teleport-target .oo-ui-processDialog > .oo-ui-window-frame /* Wikipedia: UI for media Search and Upload */
 {
-	height: 100% !important;
+	height: 80% !important;
+	/* With bigger value - JS will not load next images, because it triggers on scroll :(
+	 * TODO fix JS?
+	 */
 }
 
 .oo-ui-windowManager-modal > .oo-ui-dialog {
