--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.3.14
+@version        1.4.0
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1444,6 +1444,13 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	[style='margin:2em auto; padding:1em; max-width:70em;'] /* Header with text "Grantee Portal" https://meta.wikimedia.org/wiki/Grants:Processing/Grantee_Portal */
 	{
 		display: none !important;
+	}
+}
+
+@-moz-document domain("wikidata.org") {
+	.wikibase-sitelinkgroupview.mw-collapsible.mw-made-collapsible.listview-item.wikibase-toolbar-item {
+		/* Item: bottom with links to other projects: width increase to have space for titles in one line */
+		max-width: max-content;
 	}
 }
 
