--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.4.2
+@version        1.4.3
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -172,6 +172,9 @@ li.gallerybox div.thumb, /* https://commons.wikimedia.org/wiki/Category:Historic
 {
     border: 0 !important;
 }
+
+/* Wikipedia page that not exists: top-right popup: "Wikipedia does not have a page with this exact title. To start a page called..." */
+.ve-ui-mwNoticesPopupTool-items > div:not(:first-child),
 
 .mw-parser-output .mp-box, /* Main page "Other areas of Wikipedia" */
 
