--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.4.11
+@version        1.4.12
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -245,6 +245,8 @@ li.gallerybox div.thumb, /* https://commons.wikimedia.org/wiki/Category:Historic
 	/* Without this - on pages like https://meta.wikimedia.org/wiki/User:Vitaly_Zdanevich/global.js "User Page", "Discussion" will use more space */
 	height: initial;
 }
+
+.ve-init-mw-editSwitch .oo-ui-popupToolGroup.oo-ui-iconElement .oo-ui-popupToolGroup-handle, /* Edit page: right button with switch between source and visual editors */
 #left-navigation .vector-menu-content-list { /* Buttons "Page", "Discussion" */
 	filter: invert();
 }
