--- a/wikipedia-black.user.css
+++ b/wikipedia-black.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Wikipedia and sister projects: black, minimal
 @namespace      https://github.com/vitaly-zdanevich/wikipedia-userstyle-dark-minimum
-@version        1.4.18
+@version        1.4.19
 @description    Black, with removed elements that I do not need.
 @author         Vitaly Zdanevich
 ==/UserStyle== */
@@ -1606,6 +1606,11 @@ body.mediawiki .ve-ce-mwLatexNode .mwe-math-mathml-a11y {
 	span[style='font-style: italic;background-color:#CCFFFF;cursor:help;'] /* https://ru.wiktionary.org/w/index.php?title=shaky&stable=0#Значение */
 	{
 		background: #133 !important;
+	}
+
+	.tocnumber /* TOC digits https://ru.wiktionary.org/w/index.php?title=shaky&stable=0#Значение */
+	{
+		display: none;
 	}
 }
 
